[package]
name = "bplustree"
version = "0.1.0"
authors = ["André Guedes <andre.guedes@neoway.com.br>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "Concurrent in-memory B+ Tree featuring optimistic lock coupling"
repository = "https://github.com/NeowayLabs/bplustree"

keywords = ["b-tree", "tree", "concurrent", "map"]
categories = ["concurrency", "data-structures"]

[profile.release]
debug = true

[[bin]]
path = "src/persistent/mod.rs"
name = "persistent"

[dependencies]
parking_lot = "0.11.1"
parking_lot_core = "0.8.3"
thiserror = "1"
crossbeam-epoch = "0.9"
smallvec = { version = "1.6", features = ["const_generics"]}


nix = "0.23"
crossbeam-queue = "0.3"
scc = "0.11.2"
once_cell = "1.8"
indexmap = "1.7"
io-uring = "0.5.2"
rand = "0.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serial_test = "0.5"
